css/km_base.css
body{
    font-size: 130%;
    background-color: #f9f9f9;
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
}

.danger{
    background-color:  rgb(160,30,40);
}

.text-danger{
    color: rgb(160,30,40);
}

.alert-danger{
    color: #a01e28;
    background-color: #f8d9db;
    border-color: #f2b8bc;
}


.space-col{
    margin: 0;
}


.navbar-inverse {
   color: white;
   background-color: rgb(160,30,40);
   border-color: rgb(160,30,40);
}
.navbar-inverse .navbar-collapse,
.navbar-inverse .navbar-form {
    border-color: rgb(160,30,40);
}

.navbar-inverse .navbar-toggle {
    border-color: rgb(160,30,40);
}
.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:focus {
    border-color: rgb(160,30,40);
    background-color: rgb(160,30,40);
}
.logo-container > img {
    max-height: 150px;
    padding: 0;
    z-index: -9999999;
}


.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
   color: #fff;
   background-color: rgb(160,30,40);
}
/* override fixed pixel font sizes to be dynamic */
.navbar-inverse .navbar-brand {
    letter-spacing: -0.02em;
    font-weight: bold;
    color: #ffffff;
   font-size: 1.6em;
   min-height: 1.2em;
}

.navbar-inverse .navbar-nav > li > a {
    letter-spacing: -0.05em;
   color: #ffffff;
}

.logo-container {
   font-size: 1.4em;
   line-height: 1.2em;
}
@media only screen and (max-device-width: 760px) {
   h1, .h3 {
      font-size: 2em;
   }

   .h4 {
      font-size: 1.7em;
   }
}


/* overrice core css regarding array block splitting to pieces */
@media
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {
    /* no borders for the table */
    table.ls-answers {
        border: none;
    }

    /* the array subquestion labels */
    table.ls-answers tbody th {
        font-size: 1.2em;
        font-weight: bold;
    }

    /*no borders between subquestions*/
    table.ls-answers tbody th {
        border: none;
    }

    /* remove border when array is split to pieces */
    table.ls-answers tbody td{border: none}
    /* indent radio buttins on left */
    .dir-ltr .ls-answers td.radio-item,.dir-ltr .ls-answers td.checkbox-item{padding-left: 2em;}
}

.ls-questions-have-errors{
    font-size: 1.3em;
    margin-top: 1em;
}

.group-container{
    margin: 0;
    padding: 0;
}

#navigator-container{
    margin-top: 1.2em;
}
#ajax-loading {
    background: url("../files/ajax-loader.gif") no-repeat scroll center center rgba(255,255,255,0.8);
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: 1000;
}
.question-container{
    background-color: white;
    margin-bottom: 0;
    margin-top: 1.5em;
    padding: 0.7em;
}
.question-hilight{
    border-color: rgb(160,30,40);
}

.answer-item{
   font-size: 1.3em;
}
/* Adjust sizes */
.question-title-container{
   font-size:1.6em;
}
.ls-label-question{
    color: #333;
    font-weight: bolder;
    letter-spacing: -0.05em;

    /* never break words with hyphens */
    -webkit-hyphens: none !important;
    -moz-hyphens: none !important;
    -ms-hyphens: none !important;
    hyphens: none !important;
}

.ls-answers{
    padding-top: 2em;
    padding-bottom: 0em;
}

.ls-question-message, .dir-ltr .ls-questionhelp  {
   margin-left: 0em;
   font-size: 1.1em;
   text-transform: uppercase;
}


.ls-questionhelp:before{content:""}
.ls-questionhelp:before {
   display: block;
   position:absolute;
   font-family: FontAwesome;
   font-size: inherit;
   line-height: inherit;
   height:100%;
}
.question-title-container{
   padding-bottom: 0.2em;
}


/*override default bootstrap for the answers */
.answer-container .form-group{
    margin-bottom: 0.2em;
}

.answer-container ul {
    margin-bottom: 0em;
}
.answer-container{
    padding-bottom: 1.2em;
}

.modal-header {
    padding:9px 15px;
    border-bottom:1px solid #eee;
    background-color: #eb4003;
    -webkit-border-top-left-radius: 7px;
    -webkit-border-top-right-radius: 7px;
    -moz-border-radius-topleft: 7px;
    -moz-border-radius-topright: 7px;
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
}
.modal-header span{
    color: white;
    font-weight: bold;
    font-size: 1.3em;
}
.modal-body{
    font-size: 1.2em;
}

/*--- table stripes---------*/
.ls-even {
    background-color: #f9f9f9;
}


.subquestion-list{
    font-size: 1.2em;
}

/*......... custom things .............*/
.eoo{
    font-size: 0.9em;
    font-weight:normal;
    font-style:italic;
    color: #8c8c8c;
}


/*......... progress-bar .............*/
.progress-bar {
    float: left;
    width: 0;
    height: 100%;
    font-size: 12px;
    line-height: 20px;
    color: #fff;
    text-align: center;
    background-color: #8D8B7C;
    -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
    -webkit-transition: width .6s ease;
    -o-transition: width .6s ease;
    transition: width .6s ease;
}

/*......... the question code always visible while survey not activated .............*/
.admin-question-code {
    float: right;
    margin-left: -10em;
    font-weight: bold;
    color: #cccccc;
}

